# realtime512

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/FileExplorer/: FileDetailView.tsx  FileExplorerView.tsx  python-instructions.py
dashboard/src/components/Layout/: AppLayout.tsx
dashboard/src/components/Overview/: OverviewView.tsx
dashboard/src/hooks/: usePolling.ts
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: navigation.ts
devel/: digital-ocean-setup.md
figpack-realtime512-ui/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
figpack-realtime512-ui/src/: TimeseriesSelectionContext.ts  decodeMp4ToByteArray.ts  figpack-interface.ts  figpack-utils.ts  index.tsx
figpack-realtime512-ui/src/views/ClusterSeparationView/: ClusterSeparationView.tsx  ClusterSeparationViewClient.ts  FPClusterSeparationView.tsx  (+1 more)
realtime512/: cli.py
realtime512/figpack_realtime512/: ClusterSeparationView.py  MEAFiringRatesAndAmplitudes.py  MEAMovie.py  TemplatesView.py  figpack_realtime512_extension.py
realtime512/helpers/: bandpass_filter.py  channel_spike_stats.py  coarse_sorting.py  data_utils.py  generate_preview.py  high_activity_intervals.py  template_computation.py  time_shifts.py  vision_raw.py
realtime512/serve/: API.md  __init__.py  api_handlers.py  run_serve.py
realtime512/start/: acquisition_processor.py  build_utils.py  config_utils.py  file_processors.py  file_setup.py  run_start.py
(+27 files in other folders)
